--- a/Views/Patient/AppointmentSelectDoctor.cshtml
+++ b/Views/Patient/AppointmentSelectDoctor.cshtml
@@ -46,11 +46,13 @@
                 <span asp-validation-for="PatientId"  class="text-danger"></span>
             </div>
     
-            <div class="form-group">
+            <div class="form-group" >
+
                 <label asp-for="AppointmentDate" class="control-label"></label>
-                <input asp-for="AppointmentDate" class="form-control" />
+                <input type="date" id="demo" asp-for="AppointmentDate" class="form-control"  />
                 <span asp-validation-for="AppointmentDate" class="text-danger"></span>
             </div>
+                
          
               
               <div class="form-group">
@@ -69,4 +71,21 @@
 </div>
 
 
+<script>
+var date = new Date();
+var tdate = date.getDate();
+var month = date.getMonth() + 1;
+if (tdate < 10) {
+    tdate = '0' + tdate;
+}
+if (month < 10) {
+    month = '0' + month;
+}
+var year = date.getUTCFullYear();
+var minDate = year + "-" + month + "-" + tdate;
 
+document.getElementById("demo").setAttribute('min', minDate);
+
+console.log(minDate);
+
+</script> 
